import java.util.List;

public class Book {
    private String title;
    private String author;
    private Float averageRating;
    private List<String> userReviews;
}
